[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/base_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://NetworkSetup.gd" type="Script" id=2]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="CreateServerButton" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -80.0
margin_right = 238.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "Create Server"

[node name="JoinServerButton" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = 70.0
margin_right = 238.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 1 )
text = "Join Server"

[connection signal="pressed" from="MultiplayerConfigure/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
